force-app/main/default/objects/facture_devis__c/fields/Statut_devis__c.field-meta.xml
<CustomField>
    <fullName>Statut_devis__c</fullName>
    <label>Statut devis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analyse</fullName>
            </value>
            <value>
                <fullName>En attente demande de pieces</fullName>
                <label>En attente demande de pièces</label>
            </value>
            <value>
                <fullName>En attente validation medicale</fullName>
                <label>En attente validation médicale</label>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Devis valide</fullName>
                <label>Devis validé</label>
            </value>
            <value>
                <fullName>Devis rejete</fullName>
                <label>Devis rejeté</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>