force-app/main/default/objects/facture_devis__c/fields/Taux_de_change_valide_Ebury__c.field-meta.xml
<CustomField>
    <fullName>Taux_de_change_valide_Ebury__c</fullName>
    <label>Taux de change validé Ebury</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>