force-app/main/default/objects/facture_devis__c/fields/Taux_prise_charge__c.field-meta.xml
<CustomField>
    <fullName>Taux_prise_charge__c</fullName>
    <label>Taux de prise en charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>