force-app/main/default/objects/facture_devis__c/fields/TECH_Garantie__c.field-meta.xml
<CustomField>
    <fullName>TECH_Garantie__c</fullName>
    <formula>Garantie__r.Name</formula>
    <label>TECH_Garantie</label>
    <type>Text</type>
</CustomField>