force-app/main/default/objects/facture_devis__c/fields/TECH_isCloned__c.field-meta.xml
<CustomField>
    <fullName>TECH_isCloned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_isCloned</label>
    <type>Checkbox</type>
</CustomField>