force-app/main/default/objects/facture_devis__c/fields/TECH_statusbar__c.field-meta.xml
<CustomField>
    <fullName>TECH_statusbar__c</fullName>
    <label>TECH_statusbar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>