force-app/main/default/objects/facture_devis__c/fields/TECH_StepTracker__c.field-meta.xml
<CustomField>
    <fullName>TECH_StepTracker__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TECH_StepTracker</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>