force-app/main/default/objects/facture_devis__c/fields/TECH_ValidationManagement__c.field-meta.xml
<CustomField>
    <fullName>TECH_ValidationManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_ValidationManagement</label>
    <type>Checkbox</type>
</CustomField>