force-app/main/default/objects/facture_devis__c/fields/TECH_ValidationMedical__c.field-meta.xml
<CustomField>
    <fullName>TECH_ValidationMedical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_ValidationMedical</label>
    <type>Checkbox</type>
</CustomField>