force-app/main/default/objects/facture_devis__c/fields/Type_de_devis__c.field-meta.xml
<CustomField>
    <fullName>Type_de_devis__c</fullName>
    <label>Type de devis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Devis final</fullName>
            </value>
            <value>
                <fullName>Devis initial</fullName>
            </value>
            <value>
                <fullName>Running cost</fullName>
            </value>
            <value>
                <fullName>Devis</fullName>
                <isActive>false</isActive>
                <label>Devis</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>