force-app/main/default/objects/facture_devis__c/fields/Type_de_facture__c.field-meta.xml
<CustomField>
    <fullName>Type_de_facture__c</fullName>
    <label>Type de facture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hopital</fullName>
                <label>Hôpital</label>
            </value>
            <value>
                <fullName>Frais medicaux</fullName>
                <label>Frais médicaux</label>
            </value>
            <value>
                <fullName>Rapatriement</fullName>
            </value>
            <value>
                <fullName>Frais de gestion</fullName>
            </value>
            <value>
                <fullName>Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>