force-app/main/default/objects/facture_devis__c/fields/Urgence__c.field-meta.xml
<CustomField>
    <fullName>Urgence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urgence</label>
    <type>Checkbox</type>
</CustomField>