force-app/main/default/objects/facture_devis__c/fields/Urgence_finance__c.field-meta.xml
<CustomField>
    <fullName>Urgence_finance__c</fullName>
    <label>Urgence finance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>