force-app/main/default/objects/facture_devis__c/fields/Validation_management__c.field-meta.xml
<CustomField>
    <fullName>Validation_management__c</fullName>
    <label>Validation management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>KO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>