force-app/main/default/objects/facture_devis__c/recordTypes/Devis.recordType-meta.xml
<RecordType>
    <fullName>Devis</fullName>
    <active>true</active>
    <label>Devis</label>
</RecordType>