force-app/main/default/objects/facture_devis__c/recordTypes/Facture.recordType-meta.xml
<RecordType>
    <fullName>Facture</fullName>
    <active>true</active>
    <label>Facture</label>
</RecordType>