force-app/main/default/objects/facture_devis__c/recordTypes/facture_assistance.recordType-meta.xml
<RecordType>
    <fullName>facture_assistance</fullName>
    <active>true</active>
    <label>Facture Assistance</label>
</RecordType>