force-app/main/default/objects/facture_devis__c/recordTypes/facture_devis_tiers_payant.recordType-meta.xml
<RecordType>
    <fullName>facture_devis_tiers_payant</fullName>
    <active>true</active>
    <label>Facture / Devis Tiers Payant</label>
</RecordType>