force-app/main/default/objects/facture_devis__c/recordTypes/facture_had.recordType-meta.xml
<RecordType>
    <fullName>facture_had</fullName>
    <active>true</active>
    <label>Facture HAD</label>
</RecordType>