force-app/main/default/objects/facture_devis__c/recordTypes/Remboursement.recordType-meta.xml
<RecordType>
    <fullName>Remboursement</fullName>
    <active>true</active>
    <label>Remboursement</label>
</RecordType>