force-app/main/default/objects/facture_devis__c/validationRules/VR_UpdateChampNameCommunity.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_UpdateChampNameCommunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Name),
    CONTAINS($Profile.Name, &apos;Community&apos;)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Impossible de modifier le Numéro de devis / facture depuis le portail.</errorMessage>
</ValidationRule>