force-app/main/default/objects/facture_devis__c/listViews/Factures_trait_es_2.listView-meta.xml
<ListView>
    <fullName>Factures_trait_es_2</fullName>
    <columns>NAME</columns>
    <columns>service__c</columns>
    <columns>montant_total_en_euro__c</columns>
    <columns>devise_lookup__c</columns>
    <columns>prestataire__c</columns>
    <columns>moyen_du_service__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Facture_trait_e__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>🌐 Factures traitées (GC)</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>