force-app/main/default/objects/facture_devis__c/listViews/Liste_HAD_pour_date_du_paiement.listView-meta.xml
<ListView>
    <fullName>Liste_HAD_pour_date_du_paiement</fullName>
    <columns>prestataire__c</columns>
    <columns>prestataire_logistique__c</columns>
    <columns>service__c</columns>
    <columns>NAME</columns>
    <columns>date_du_paiement__c</columns>
    <columns>montant_total_en_euro__c</columns>
    <columns>commentaire__c</columns>
    <columns>montant_total__c</columns>
    <columns>devise_lookup__c</columns>
    <columns>Montant_pris_en_charge__c</columns>
    <columns>Montant_copay__c</columns>
    <columns>Montant_negociation__c</columns>
    <columns>Date_reception_facture__c</columns>
    <columns>GrandCompte__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bon_a_payer_verifie__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>vérifié</value>
    </filters>
    <filters>
        <field>date_du_paiement__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>facture_devis__c.facture_had</value>
    </filters>
    <label>Liste HAD pour date du paiement</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>